--- a/doqmeat/books/index.html
+++ b/doqmeat/books/index.html
@@ -18,7 +18,11 @@
 	<h1>reading log</h1>
 	<h2>current</h2>
 	<ul>
-		<li>chainsaw man -- 168/?</li>
+		<li>
+			<details>
+				<summary>chainsaw man -- 170/?</summary>fujimoto going to hell bro.
+			</details>
+		</li>
 		<li>the guy she was interested in wasn't a guy at all -- ?/?</li>
 		<li>bloodborne -- 13 / ???</li>
 		<li>villain -- ?/?</li>
