--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -87,6 +87,8 @@
 			<img src="!g/stamp_cat_10.png">
 			<img src="!g/Chococat09.gif">
 			<img src="!g/csm.png">
+			<img src="!g/caiman.png">
+			<img src="!g/nikaido.png">
 			<img src="!g/matry.gif">
 			<img src="!g/orka.gif">
 			<img src="!g/oatchilove.png">
@@ -164,6 +166,7 @@
 			<img src="!g/imbeingputdown.gif">
 			<img src="!g/luvmyputer.gif">
 			<img src="!g/crying%20and%20throwing%20up.gif">
+			<img src="!g/waterbottle.gif">
 			<img src="!g/strawberrykisses.gif">
 			<img src="!g/antimusk.gif">
 			<img src="!g/loveoninefrens.gif">
@@ -187,6 +190,7 @@
 			<img src="!g/ipod.gif">
 			<img src="!g/cringe.gif">
 			<img src="!g/eatshit.gif">
+			<img src="!g/i-love-my-3ds.gif">
 			<img src="!g/birdapp.gif">
 			<a href="https://shishka.neocities.org/nofollow/site-dont-blink" target="_blank"><img src="!g/blockads.gif"></a>
 			<img src="!g/mikuplsinteract.gif">
@@ -203,6 +207,7 @@
 			<img src="!g/dontrush.gif">
 			<img src="!g/cat-person.gif">
 			<img src="!g/hug.gif">
+			<img src="!g/pcaddicted.gif">
 			<a href="https://www.tumblr.com/graphics-cafe/703737490213945344/star-blinkies-by-pawpr1nc3-customizable?source=share" target="_blank"><img src="!g/silly.gif" width="150px"></a>
 			<img src="!g/sparkleon.gif">
 			<img src="!g/nyancat1.gif" width="150px">
@@ -277,7 +282,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>19.jun.24</b></p>
+		<p>last updated on: <b>09.jul.24</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
