--- a/doqmeat/notebook/sitely/info.html
+++ b/doqmeat/notebook/sitely/info.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>info</title>
+	<title>tools</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="site.css" rel="stylesheet" type="text/css" media="all">
@@ -21,26 +21,35 @@
 	<div id="wrapper">
 		<p class="hide" style="text-align:left;"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; sitely</small></p>
 
-		<h1>tools info</h1>
+		<h1>tools</h1>
 
-		<p>just nerd talk about site and stuff i use</p>
+		<p>if you wanna be nosy and know what i use this is the perfect page for you!</p>
 
 		<h2>site</h2>
 		<p>site has been live since 11.apr.23! under <mark>doqmeat.com</mark> since 24.mar.24</p>
-		<p><b>coding editor</b>: i've used a few while making this site but <a href="https://brackets.io" target="_blank">brackets.io</a> is by far my favorite! <mark>some extentions i recommend:</mark></p>
+		<p><b>coding editor</b>: <a href="https://brackets.io" target="_blank">brackets.io</a> is by far my favorite! <mark>some extentions i recommend:</mark></p>
 		<ul>
 			<li>"Beautify" - makes code pretty and not so messy, organizes it</li>
 			<li>"Alice - Spell Checking" and alongside this "Alice Dictionaries"</li>
 			<li>"Brackets Git"</li>
 			<li>for UI improvements: "custom work"</li>
 		</ul>
+		<p><b>CLI</b>: <a href="https://gitforwindows.org/" target="_blank">git bash</a></p>
 		<p><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></p>
-		<p><b>image editing</b>:</p>
+		<p><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></p>
+
+		<h2>image editing</h2>
 		<ul>
-			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
-			<li>clip studio paint - anything i've made art wise has been with this program <img src="/about/!g/folder.png"> <img src="/about/!g/hide.jpg"><img src="/about/!g/max.jpg"><img src="/about/!g/close.jpg"> <small>though i should really look for a better pixel art program lol...</small></li>
+			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
+			<li><a href="https://www.clipstudio.net/en/" target="_blank">clip studio paint</a> - anything i've made art / graphic related has been with this program most of the time.</li>
+			<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a fork of <i>asesprite. </i>made some pixels with it.</li>
 		</ul>
 
+		<h2>my stuff</h2>
+		<p><b>puter</b>: HP envy x360 convertible laptop w/ stylus <small>which is how i draw here!</small> / 16gb ram / intel core i7 + nvidia geforce mx450</p>
+		<p><b>keyboard</b>: <a href="https://www.amazon.com/MOTOSPEED-Professional-Mechanical-Keyboard-Illuminated/dp/B07HFRB2DP" target="_blank">motospeed wired keyboard with red switches</a> <small>because it's convertible i use a seperate keyboard for it, this also helps it not overheat since i always have it folded in a upside down V shape</small></p>
+		<p><b>mouse</b>: <a href="https://www.amazon.com/Redragon-Wireless-Programmable-Rechargeable-M910-WS/dp/B0BW8DB72Z" target="_blank">redragon wireless gaming mouse</a></p>
+		<p><b>headphones</b>: razer kraken kitty headset <small>i love these headphones to death but the pink leather has started to peel off ever since i moved to a more humid area :')</small></p>
 
 
 	</div>
