added cato:buttered cat to gaming log

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -103,6 +103,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished adv single">
 			<a title="bugsnax" href="bugsnax/index.html" target="iframe_a"><img src="bugsnax/cover.jpg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv single cat platformer toplay">
+			<a title="cato: buttered cat" href="cato/index.html" target="iframe_a"><img src="cato/cover.jpg" alt="cato" tabindex="0"></a>
+		</div>
 		<div class="filterDiv cat single rpg adventure">
 			<a title="cattails" href="cattails/index.html" target="iframe_a"><img src="cattails/cover.jpg" tabindex="0"></a>
 		</div>
