minor changes n fixes around various pages

--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -25,15 +25,19 @@
 
 		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me! ♪(´▽｀)</p>
 
-		<p>i just wanna have a space where i can talk a lil bit about the stuff i like while also showcasing it as well.</p>
+		<p>i just wanna have a space where i can talk a lil bit about the stuff i like to listen to while also showcasing it as well.</p>
+
+		<p>my headphones are the infamous <i>razer kraken kitty headset</i> <small>they are honestly great tbh...</small> and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a> on windows.</p>
+
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the CD, if not i'll get it digitally.</p>
 
 		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> !!! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
-		<h3>other</h3>
+		<h3>misc</h3>
+		<p>i run a <a title="currently a WIP!" href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota fansite</a>, he is my favorite vocaloid producer and i highly recommend his stuff if you enjoy vocaloid. i also run the <a href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota song bot</a> on twitter.</p>
 
-		<p>i run the <a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a> on twitter! you can see more info about the bot <a title="siinamota.doqmeat.com/bot" href="https://siinamota.doqmeat.com/bot" target="_blank">here</a>! if you're into vocaloid, i recommend checking out siinamota's stuff! i have a <a href="https://sepiarecord.notion.site/sepiarecord/homepage-6242b9a7ce844610bdf2a9187a0a1bfb" target="_blank">siinamota guide</a> on notion <img src="/!g/pix/emote1bubbles.gif" </p>
 
 		<h3>important dates</h3>
 
