--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -25,7 +25,7 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>thoughts n highlights of stuff i listen to! <small>i have a life now so expect less logs in here :(</small></p>
+		<p>thoughts n highlights of stuff i listen to! i try my best to be as detailed as possible in these. <small>that's why there aren't many bc they take a while to write... head empty.</small> these are usually first listens unless stated otherwise. <small>also i have a life now so expect less logs in here :( you'll see more activity @ my <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM page</a></small></p>
 		<h3>pages</h3>
 		<a href="2024/summer.html" target="_parent">summer 2024</a>
 		<a href="2024/spring.html" target="_parent">spring 2024</a>
@@ -39,12 +39,6 @@
 		<a href="2023/06.html" target="_parent">june 2023</a>
 		<a href="2023/05.html" target="_parent">may 2023</a>
 		<a href="2023/04.html" target="_parent">april 2023</a>
-
-		<h4>RYM yearly logs</h4>
-		<p>compared to the <i>listening logs</i> on my site, these RYM lists have everything <small>new</small> i've listened to on a yearly basis.</p>
-		<a href="https://rateyourmusic.com/list/doqmeat/2024-%F0%9F%93%9D%E2%AD%90/" target="_blank" class="outlink">2024</a>
-		<a href="https://rateyourmusic.com/list/doqmeat/2023" target="_blank" class="outlink">2023</a>
-		<a href="https://rateyourmusic.com/list/doqmeat/2022" target="_blank" class="outlink">2022</a>
 
 		<h4>all listening logs</h4>
 		<details>
