--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -348,7 +348,7 @@
 		<li><a href="https://wiby.me/" target="_blank">wiby.me</a> - search engine that only indexes sites without JS</li>
 
 		<h3>communities</h3>
-		<li><a href="https://discourse.32bit.cafe/" target="_blank">discourse.32bit.cafe</a> - a community of website hobbyists and professionals</li>
+		<li><a href="https://discourse.32bit.cafe/" target="_blank">discourse.32bit.cafe</a> - a nice forum of website hobbyists and professionals</li>
 		<li><a href="https://sundaysites.cafe/" target="_blank">sundaysites.cafe</a> - hosts sessions where you create an HTML page with a given topic and can interact with others afterwards!</li>
 
 		<h3 id="dragndrop">drag n drop web builders</h3>
@@ -359,7 +359,7 @@
 		<li><a href="https://www.tree.fm/">tree.fm</a> - listen to a forest!</li>
 		<li><a href="http://www.rpgamers.net/radio/" target="_blank">rpgamers.net radio</a> - a variety of video game ost songs</li>
 		<li><a href="https://www.lofiatc.com/?icao=kphx" target="_blank">lo-fi air traffic control</a></li>
-		<li><a href="https://www.xmanagerapp.com/" target="_blank">xmanager</a> - pretend you have spotify premium on android</li>
+		<li><a href="https://www.xmanagerapp.com/" target="_blank">xmanager</a> - spotify on your android phone. but a lil bit better.</li>
 		<li><a href="https://lel.nekoweb.org/lastfm/" target="_blank">neko.fm</a></li>
 
 		<h3 id="games">games</h3>
