--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -333,6 +333,8 @@
 			<a title="japanese postcard shop site! has a ton of beautiful illustrations by different artists" href="https://wadouraku.co.jp" target="_blank"><img src="!g/wadouraku.gif"></a>
 		</div>
 
+		<p><a href="https://www.horg.com/" target="_blank">horg.com</a></p>
+
 		<div class="banner">
 			<a title="pucci's world - a site dedicated to the webmaster's cats! so cute" href="https://puccisworld.neocities.org/" target="_blank"><img src="!g/pucci.gif"></a>
 		</div>
