--- a/doqmeat/music/recaps/index.html
+++ b/doqmeat/music/recaps/index.html
@@ -35,7 +35,7 @@
 	<div id="frame">
 
 		<h2>yearly recaps</h2>
-		<p>every year i make a like a music summary with my top songs of the year, albums, and more!</p>
+		<p>every year i make a like a music summary with my top songs of the year, albums, favorite finds, and more!</p>
 		<p><a href="2023/index.html" target="_parent">2023</a> <span class="emoji2"></span> <a href="2022/index.html" target="_parent">2022</a></p>
 
 	</div>
