--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -34,13 +34,12 @@
 			<center>
 				<h1>templates</h1>
 			</center>
-		<p>F2U layouts and templates coded by me for you to use on your website!</p>
+		<p>F2U layouts and templates coded by me for you to use on your website! <a href="https://github.com/doqmeat/HTML-templates" target="_blank">github repository</a></p>
 
 		<h2>rules</h2>
 
-		<li>can be edited to your hearts content! go crazy even.
-		<li>can be used for anything that accepts HTML</li>
-		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.com/" target="_blank">website</a> is very appreciated!</li>
+		<li>you are allowed to edit and use code from these templates for your own things to your hearts content</li>
+		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.com/" target="_blank">website</a> anywhere is very appreciated.</li>
 
 		<h2 id="notebook"><a title="click for preview and code!" href="preview/notebook.html" target="_blank">notebook</a></h2>
 		<center><img src="preview/notebook.jpg" width="100%"><br><img src="preview/notebook2.jpg" width="100%"></center>
