--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -39,7 +39,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<!-- 	link tab wrapper -->
 		<div id="link-wrapper" class="tabcontent">
-			<div id="link-p" class="paper left">
+			<div class="link-p paper left">
 				<div class="left-in">
 
 					<p>lots and lots of links. i save them all here!</p>
@@ -81,7 +81,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				</div>
 			</div>
 
-			<div id="link-p" class="paper right">
+			<div class="link-p paper right">
 				<iframe src="links/credit.html" name="iframe_a" height="600px" width="488px" style="border:none"></iframe>
 				<!-- paper right end div -->
 			</div>
@@ -90,7 +90,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<!-- 	site related tab wrapper -->
 		<div id="site-wrapper" class="tabcontent">
-			<div id="site-p" class="paper left">
+			<div class="site-p paper left">
 				<div class="left-in">
 					<p>this is the site related things tab</p>
 					<li><a href="sitely/info.html" target="iframe_b">site + tools info</a></li>
@@ -125,7 +125,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				</div>
 			</div>
 
-			<div id="site-p" class="paper right">
+			<div class="site-p paper right">
 				<iframe src="/sitemap.html" name="iframe_b" height="600px" width="489px" style="border:none"></iframe>
 			</div>
 			<!-- 	site wrapper end div -->
@@ -133,7 +133,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<!-- 	archive related tab wrapper -->
 		<div id="archive-wrapper" class="tabcontent">
-			<div id="archive-p" class="paper left">
+			<div class="archive-p paper left">
 				<div class="left-in">
 					<p>the archives. its dusty in here. </p>
 					<p><mark>some links within these pages might be broken!</mark></p>
@@ -149,7 +149,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				</div>
 			</div>
 
-			<div id="archive-p" class="paper right">
+			<div class="archive-p paper right">
 				<iframe src="archive/homepage/index.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
@@ -159,7 +159,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<!-- 	F2U wrapper -->
 		<div id="F2U-wrapper" class="tabcontent">
-			<div id="F2U-p" class="paper left">
+			<div class="F2U-p paper left">
 				<div class="left-in">
 					<p>things i make that is free to use! hoping to add more stuff here in the future!</p>
 					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol</p>
@@ -182,7 +182,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				</div>
 			</div>
 
-			<div id="F2U-p" class="paper right">
+			<div class="F2U-p paper right">
 				<iframe src="F2U/codes.html" name="iframe_d" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
@@ -192,26 +192,21 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<!-- 	archive related tab wrapper -->
 		<div id="info-wrapper" class="tabcontent">
-			<div id="info-p" class="paper left">
+			<div class="info-p paper left">
 				<div class="left-in">
-					<h1> </h1>
+					<h1>des' notebook</h1>
 					<div id="sticky" class="draggable">
 						<br><br>welcome to my little resource notebook! :3<br><img src="/!g/deco/bunnyzzz.gif">
-						<div id="sticky-in">
-
-						</div>
 					</div>
 					<p>in this page you'll find a variety of things i have saved for my own reference, but maybe they might be helpful (or at least interesting) for you too!</p>
 					<p>i also have things related to the making of this website here!</p>
 					<p><mark>click on the tabs to navigate it</mark> <img src="/!g/deco/catlaying.gif"></p>
 
-
-
 					<!-- 		paper left end div -->
 				</div>
 			</div>
 
-			<div id="info-p" class="paper info-p-right">
+			<div class="info-p paper info-p-right">
 				<center>
 					<h2>credits</h2>
 				</center>
@@ -225,9 +220,6 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 				<li>notebook holographic cover img <a title="from pexels" href="https://www.pexels.com/photo/holographic-foil-as-abstract-background-4286932/" target="_blank">by miodrag kitanović on pexels</a></li>
 
-				<mark>(one day i will understand javascript and that day is not today)</mark>
-
-				<li>and tabs javascript code from <a href="https://www.w3schools.com/howto/howto_js_tabs.asp" target="_blank">w3chools</a> beloved</li>
 				<img src="/!g/deco/crystalgreenhouse_book.gif">
 				<img src="/!g/deco/collegeroad_pencase.gif">
 
