--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -116,6 +116,8 @@
 		<li><a href="http://www.mf2fm.com/rv/" target="_blank">RV's free JS effects</a> for your site! includes text, cursor, and screen effects!</li>
 
 		<h3 id="css">CSS</h3>
+		<li><a href="https://animated-gradient-background-generator.netlify.app/" target="_blank">animated gradient bg generator</a></li>
+		<li><a href="https://owumaro.github.io/text-stroke-generator/" target="_blank">text stroke generator</a></li>
 		<li><a href="https://csscompressor.com/" target="_blank">CSS compressor</a> - compresses file sizes!</li>
 		<li><a href="https://ianlunn.github.io/Hover/" target="_blank">hover.css</a> - a collection of neat CSS :hover snippets!</li>
 		<li><a href="https://html-css-js.com/css/generator/box-shadow/" target="_blank">CSS box shadow generator</a></li>
