--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -165,9 +165,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			</center>
 
 			<h4>notes:</h4>
-			<li>website does not contain any <u>explicit</u> content but it is made with an adult audience in mind.</li>
+			<li>website does not contain any <u>explicit</u> content but it is made by an adult with an adult audience in mind.</li>
 			<li>some pages are heavy on graphics / IMGS and might require you to reload more than once. all IMGS on my site are optimized so load times are a bit better.</li>
-			<li>recommended to view on <u title="should not break on other browsers... but if it does lmk">firefox</u> with a 1400px+ wide screen <i>but</i> most pages are responsive to your screen size and mobile devices :)</li>
+			<li>recommended to view on <u title="should not break on other browsers... but if it does lmk">firefox</u> with a 1400px+ wide screen <i>but</i> i try my best to make pages responsive to your screen size, browsers, and mobile devices :)</li>
 			<li>site uses <b>javascript</b> and <b>iframes</b></li>
 		</div>
 
@@ -197,10 +197,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="updates" class="box">
-			<h2><a title="add my RSS to your feed!" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates</h2>
+			<h2><a title="my RSS feed" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates <small><a title="what is an RSS feed?" href="https://aboutfeeds.com/" target="_blank">[?]</a></small></h2>
 			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.com%2Frss.xml&limit=10&showtitle=false&type=js"></script>
-
-			<a href="notebook/archive/updates.html">past updates</a>
 		</div>
 
 		<div id="featured-cat" class="box">
@@ -420,10 +418,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	</div>
 
 	<footer id="foot" class="box">
-		<p><a href="/notebook/links/credit.html#home">credit for materials used!</a> / homepage runing on v3!</p>
+		<p><a href="/notebook/links/credit.html#home">credit for materials used!</a> / homepage v3 since 14.dec.23</p>
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
-			on the web since <b>april 11, 2023</b> <img src="/!g/pix/catroll.gif" alt="">
-			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a></p>
+			on the web since <b>11.apr.23</b> <img src="/!g/pix/catroll.gif" alt="">
+			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a> <img src="!g/pix/catsurprised.gif"> <a href="rss.xml">RSS feed</a></p>
 		<p>
 			<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
