--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -47,8 +47,10 @@
 						<p>my favorite character is probably cooper... yes.... he's just so much fun and funny and silly... he's also my bf's favorite character as well. but another contender is probably josephine for being the most <b>BEAUTIFUL</b> woman i've ever seen in my entire life. jesus.</p>
 
 						<p>we're currently like halfway through the 2nd season where (for some reason?) we have already established the killer of laura so now it just feels like we're following the main cast shenanigans with some filler stuff on the side and it just feels a little bit messy... but i'm still enjoying it nonetheless.</p>
+						<hr>
+						<p>that ending???</p>
 						<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
-						<p class="status">s2 e13</p>
+						<p class="status">finished</p>
 					</div>
 				</div>
 			</div>
