finished watching twin peaks

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -48,7 +48,7 @@
 
 						<p>we're currently like halfway through the 2nd season where (for some reason?) we have already established the killer of laura so now it just feels like we're following the main cast shenanigans with some filler stuff on the side and it just feels a little bit messy... but i'm still enjoying it nonetheless.</p>
 						<hr>
-						<p>that ending???</p>
+						<p>that ending??? alright then...</p>
 						<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
 						<p class="status">finished</p>
 					</div>
