joined no ai webring!

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -267,6 +267,15 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="webrings" class="box">
 			<h2>webrings &amp; widgets</h2>
+			<!--			no AI webring-->
+			<map name="noaimini2">
+				<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
+				<area href="https://baccyflap.com/noai/?prv&s=des" target="_top" shape="rect" coords="5,16,16,26" alt="previous" title="previous">
+				<area href="https://baccyflap.com/noai/?rnd" target="_top" shape="rect" coords="38,16,51,27" alt="random" title="random">
+				<area href="https://baccyflap.com/noai/?nxt&s=des" target="_top" shape="rect" coords="72,16,83,26" alt="next" title="next">
+			</map>
+			<img usemap="#noaimini2" src="https://baccyflap.com/noai/miniwidget2.gif" style="width:88px;height:31px" alt="a white rounded rectangle in red outline, with the words 'no ai webring'. there's a no access emoji, a little robot emoji, two arrows pointing left and right, and two crossed arrows">
+
 			<!--		catfolk-->
 			<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
 
