--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -20,6 +20,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<link class="theme" href="/!f/homepage-v3/flower.css" rel="stylesheet" type="text/css">
 	<!--	JS for webrings-->
+	<script src="https://eggring.neocities.org/js/hatring.js"></script>
+	<script src="https://eggring.neocities.org/js/eggring-config.js"></script>
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
 	<!--	tooltip shit-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -319,11 +321,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
 			</div>
 
-			<!-- neo creatives -->
+			<!-- neo creatives 
 			<div id="ncring">
 				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-variables.js"></script>
 				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-widget.js"></script>
 			</div>
+-->
 
 			<!--		WEB GUARDIAN -->
 			<div class="results" style="width: 200px;background-color: #fff;color: #000;padding: 10px;border: 1px solid;margin: 0 auto;font-size: '15pt';">
@@ -346,6 +349,16 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<!-- mushroom -->
 			<iframe src="https://shroom.ink/guard.html/?site=doqmeat&shroom=4" height="250px" width="200px" scrolling="no" frameborder="0"></iframe>
+
+			<!--		        eggring-->
+			<div style="display: block; margin:auto;">
+				<p style="margin: 0px;">The Eggring</p>
+				<p style="margin-right: auto; margin-left: auto;">
+					<a id="eggringPrev" target="_blank" rel="noopener noreferrer">⏮︎</a> 🥚
+					<a id="eggringRand" target="_blank" rel="noopener noreferrer">⁈</a> 🥚
+					<a id="eggringNext" target="_blank" rel="noopener noreferrer">⏭︎</a>
+				</p>
+			</div>
 
 		</div>
 
