added more links + prep for a tutorial section

--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -35,6 +35,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<div class="tab2">
 			<button id="defaultOpen" class="tablinks info-b" onclick="openTab('info-wrapper')">info &amp; creds</button>
+			<button class="tablinks tut-b" onclick="openTab('tut-wrapper')">tutorials</button>
 		</div>
 
 		<!-- 	link tab wrapper -->
@@ -190,7 +191,28 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<!-- 	F2U wrapper end div -->
 		</div>
 
-		<!-- 	archive related tab wrapper -->
+		<!-- 	tut wrapper -->
+		<div id="tut-wrapper" class="tabcontent">
+			<div class="F2U-p paper left">
+				<div class="left-in">
+					<p>website related tutorials and guides i make!</p>
+					<ul>
+						<li>soon: <s>RSS feed</s></li>
+					</ul>
+
+					<!-- 		paper left end div -->
+				</div>
+			</div>
+
+			<div class="F2U-p paper right">
+				<!--				<iframe src="tutorials/" name="tut" height="600px" width="489px" style="border:none"></iframe>-->
+
+				<!-- 	paper right end div -->
+			</div>
+			<!-- 	F2U wrapper end div -->
+		</div>
+
+		<!-- 	info related tab wrapper -->
 		<div id="info-wrapper" class="tabcontent">
 			<div class="info-p paper left">
 				<div class="left-in">
@@ -225,7 +247,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 				<!-- 	paper right end div -->
 			</div>
-			<!-- 	F2U wrapper end div -->
+			<!-- 	info wrapper end div -->
 		</div>
 		<!-- 	wrapper end div -->
 	</div>
