--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -190,7 +190,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished action adv single">
 			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solar-ash/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav notdone currently platformer">
+		<div class="filterDiv fav notdone platformer">
 			<a title="sonic rush" href="sonic-rush/index.html" target="iframe_a"><img src="sonic-rush/cover.png" tabindex="0"></a>
 		</div>
 		<div class="filterDiv multi shooter notdone">
