updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -251,6 +251,7 @@
 			<a title="windchime - one of the early sites i discovered. used one of their templates for v1 of doqmeat.com too!" href="https://windchime.neocities.org/" target="_blank"><img src="!g/windchime.gif"></a>
 			<a title="whiona" href="https://whiona.me/" target="_blank"><img src="!g/whiona.png" alt="whiona"></a>
 			<a title="leilukin" href="https://leilukin.com/" target="_blank"><img src="!g/Leilukin.png" alt="leilukin"></a>
+			<a title="april" href="https://april.lexiqqq.com/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
