--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -197,7 +197,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 					<p>website related tutorials and guides i make!</p>
 					<ul>
-						<li>soon: <s>RSS feed</s></li>
+						<li><a href="tutorials/rss/index.html" target="tut">RSS feeds</a></li>
 					</ul>
 
 					<!-- 		paper left end div -->
@@ -205,7 +205,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			</div>
 
 			<div class="F2U-p paper right">
-				<!--				<iframe src="tutorials/" name="tut" height="600px" width="489px" style="border:none"></iframe>-->
+				<iframe src="tutorials/rss/index.html" name="tut" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
 			</div>
