--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -54,6 +54,10 @@
 		#rss div a {
 			font-size: 10px;
 		}
+		
+		nav a{
+			display:block;
+		}
 
 	</style>
 </head>
@@ -63,8 +67,15 @@
 	<main>
 		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; tutorials &gt;</small>
 		<h1>RSS feeds</h1>
-		<nav>table of contents: <a href="#intro">why igaf about RSS feed</a>, <a href="#reader">RSS feed readers</a>, <a href="#setup">setting up an RSS feed</a>, <a href="#display">displaying an RSS feed in HTML</a></nav>
-		<h2 id="intro">why i give a fuck about RSS feed</h2>
+<h4>table of contents: </h4>
+		<nav>
+		<a href="#intro">introduction</a>
+		<a href="#reader">RSS feed readers</a>
+		<a href="#setup">setting up an RSS feed</a>
+		<a href="#display">displaying an RSS feed in HTML</a>
+		<a href="#end">conclusion</a></nav>
+		
+		<h2 id="intro">intro</h2>
 
 		<p>while the neocities activity feed sort of gets the job done at keeping you updated with other sites, there are other ways of getting updates from websites right to your doorstep. with this method, you can also see updates from sites that have their profiles disabled, or aren't <b>hosted</b> into neocities!</p>
 		<p>from the <b>perspective of a webmaster</b>, an <mark>RSS feed</mark> is also way more customizable and reliable than whatever the neocities activity feed decides to show on your profile. this is also a great way of keeping up to date with sites without feeling obligated to check the neocities activity feed on a daily basis.</p>
@@ -74,15 +85,19 @@
 
 		<h2 id="reader">RSS feed readers</h2>
 		<p>i believe it would be easier to start with how you can <u>view and recieve updates from other sites</u> via an <mark>RSS reader</mark>. but, if you just wanna know how to set up your own, you're free to skip this and go directly to the RSS feed <a href="#setup">setup</a>.</p>
-		<hr>
 		<p>you can have an RSS reader as an extension for your browser, an app on your phone, a newsletter via e-mail, or a widget on your website.</p>
 		<p>for this guide, i will be using a browser extension. you will want search for an <b>rss reader</b> on your browser's extension library. i am pretty sure any will do the job! i use <b>feedbro</b> on <a href="https://addons.mozilla.org/en-US/firefox/addon/feedbroreader/" target="_blank" class="outlink">firefox</a> and it is also available for <a href="https://chromewebstore.google.com/detail/feedbro/mefgmmbdailogpfhfblcnnjfmnpnmdfa?hl=en" target="_blank" class="outlink">chrome</a>.</p>
 		<p>once you have a <b>reader</b> installed, we can go look for some <mark>web feeds</mark> to add to the reader!</p>
-		<p>if you've been around some websites you might have seen a link with the name <b>RSS feed</b> with this icon <img src="/!g/web/materials/rss-icon.png" width="15" alt="RSS icon"> or this badge <img src="/!g/web/materials/rss.png" alt="RSS badge"> these will get you the <b>link for their web feed</b>. <u>NOTE:</u> <small>depending on browser settings, when clicking these links your browser might download the file instead of opening the code on your browser. if this happends, just right-click on the link and click <i>copy</i>.</small></p>
+		<p>if you've been around some websites you might have seen a link with the name <b>RSS feed</b> with this icon <img src="/!g/web/materials/rss-icon.png" width="15" alt="RSS icon"> or this badge <img src="/!g/web/materials/rss.png" alt="RSS badge"> these will get you the <b>link for their web feed</b>. </p>
+		<hr>
+		<p><u>note 1</u>: depending on browser settings, when clicking these links your browser might download the file instead of opening the code on your browser. if this happends, just right-click on the link and click <i>copy</i>.</p>
+		<hr>
 		<p>once you have copied the feed link from a website, you will add it to your reader. the reader will show you a certain amount of updates + any new ones from here on out.</p>
 
 		<details>
-			<summary>here's some pictures in case you need some more help!</summary>
+			<summary>here's a picture in case you need some more help!</summary>
+			<img src="reader-2.jpg" width="100%">
+			<p>you can also change all of these settings + give it a custom title. pretty handy!</p>
 		</details>
 
 		<h2 id="setup">setting up an RSS feed</h2>
@@ -90,7 +105,6 @@
 		<p>now that you have a reader all set up, let's make an RSS feed for your website!</p>
 		<p>it's important to say that your site can have more than one RSS feed. you can have one for your microblog, another one for site updates, and so on.</p>
 		<p>do keep in mind you will have to update these manually, though there are some neat tools out there that can make you an automated RSS feed based on a HTML such as <a href="https://journal.miso.town/" target="_blank" class="outlink">journal.miso.town</a>'s <a href="https://journal.miso.town/journal-to-atom" target="_blank" class="outlink">journal to atom</a></p>
-		<hr>
 		<p>so we are going to start off by creating the <code>.xml</code> file that will have your RSS feed. name and placement of the file do not matter. let's call it <code>rss.xml</code></p>
 		<p>once you have your empty <code>rss.xml</code>, copy-paste this code into it</p>
 		<textarea><?xml version="1.0" encoding="UTF-8" ?>
@@ -114,13 +128,24 @@
 		<p>this will be the template you will use for it. this template has what is required for an RSS feed to function. here are some other <a href="https://www.w3schools.com/xml/xml_rss.asp" target="_blank" class="outlink">optional tags</a> you can also use on your feed, for now i will only work with what's required.</p>
 		<p>go ahead put your info into the template provided. as you will noticed <mark>anything <b>inside</b> an <code>item</code> tag refers to an <b>entry</b></mark>. each time you want to make a new <b>entry</b>, you have to use that same code!</p>
 		<p>here's an example: <img src="template-2.jpg" width="100%"></p>
+		<hr>
 		<p><u>note 1</u>: the date of each <code>item</code> is the <code>pubDate</code> aka <i>published date</i>. it has to be formatted as shown in the code or you will get an error. the time of the <code>item</code> <code>pubDate</code> is configured using your timezone. you'll have to check your time zone in order to put the correct value! my time zone is GMT -4 which why you see a <code>-0400</code> in there.</p>
 		<blockquote>example: if you're in eastern standard time, then you can just input <code>Tue, 09 Jul 2024 15:00:00 EST</code> in the <code>pubDate</code>.</blockquote>
+		<hr>
 		<p><u>note 2</u>: you can display HTML code in your <code>rss.xml</code> but not the way you are probably thinking of.</p>
-		<p>for example: let's say you want to include a link in the <code>description</code> of an <code>item</code>. instead of writing <code>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt;</code> you instead have to do it with <a href="https://www.w3schools.com/html/html_symbols.asp" target="_blank" class="outlink">HTML entities</a>, like so: <xmp>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt;
-</xmp></p>
-		<p>i know. nasty. but at least whatever you put in there will appear like it would in HTML on a RSS reader or widget.</p>
-
+		<p>for example: let's say you want to include a link in the <code>description</code> of an <code>item</code>. instead of writing <code>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt;</code> you instead have to do it with <a href="https://www.w3schools.com/html/html_symbols.asp" target="_blank" class="outlink">HTML entities</a>, like so:</p>
+		<ul>
+			<li>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt; = <xmp>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt;</xmp>
+			</li>
+			<li>&lt;img src=&quot;IMG-URL&quot;&gt; = <xmp>&lt;img src=&quot;IMG-URL&quot;&gt;</xmp>
+			</li>
+		</ul>
+		<p>i know. nasty. but at least whatever you put in there will appear like it would in HTML on a RSS reader or <a href="#rss">widget</a>.</p>
+		<figure>
+			<img src="reader-1.jpg" alt="screenshot from an RSS reader. different items have a link and a image" width="100%">
+			<figcaption>screenshot from my RSS reading using the above codes for a link and a img respectively.</figcaption>
+		</figure>
+		<hr>
 		<p>once you have your <code>rss.xml</code> done you need to validate it using something like w3c's <a href="https://validator.w3.org/feed/" target="_blank" class="outlink">feed validation service</a>. this is an important step since you wanna make sure your <code>rss.xml</code> is not causing any errors when being put into a <b>reader</b>.</p>
 		<p>once you get that sweet <img src="valid.png" alt="a button that says VALID RSS with a red check"> then you are good to go!</p>
 		<p>link to your <code>rss.xml</code> file somewhere on your page so people know you have an RSS feed.</p>
@@ -171,6 +196,8 @@
 		<div id="rss">
 			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.com%2Fnotebook%2Ftutorials%2Frss%2Ftemplate.xml&limit=10&showtitle=false&type=js"></script>
 		</div>
+		<h2 id="end">conclusion</h2>
+		<p>i think RSS feeds are nice and i want more people to use them. i hope you learned something from this! if this inspired you to make an RSS feed then YAY! if this did not inspired you to make one, then that it also okay, but at least i tried.</p>
 	</main>
 </body>
 
