--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -81,7 +81,7 @@
 		<p>from the <b>perspective of a webmaster</b>, an <mark>RSS feed</mark> is also way more customizable and reliable than whatever the neocities activity feed decides to show on your profile. this is also a great way of keeping up to date with sites without feeling obligated to check the neocities activity feed on a daily basis.</p>
 		<p><mark>RSS feeds</mark> are also called <mark>web feeds</mark>. these are usually files such as .rss .xml .atom and there's probably more that i either forgot or haven't personally seen used. you can read more about them <a href="https://en.wikipedia.org/wiki/RSS" target="_blank" class="outlink">here</a>. </p>
 		<p><mark>in this guide i'll be showing you how you can see RSS feeds from <i>other</i> sites and how to set up your own for your site</mark>! </p>
-		<p><small>btw this stuff is super easy to set up with some google searches. you probably do not need this guide, but i still went out of my way to write all of this to show you how this works and how easy it is to set up.</small></p>
+		<p><u>note</u>: this stuff is super easy to set up with some google searches and looking at other peoples' RSS feeds. you probably do not need this guide, but i still went out of my way to write all of this to show you how this works and how easy it is to set up alongside some tips.</p>
 
 		<h2 id="reader">RSS feed readers</h2>
 		<p>i believe it would be easier to start with how you can <u>view and recieve updates from other sites</u> via an <mark>RSS reader</mark>. but, if you just wanna know how to set up your own, you're free to skip this and go directly to the RSS feed <a href="#setup">setup</a>.</p>
@@ -198,6 +198,8 @@
 		</div>
 		<h2 id="end">conclusion</h2>
 		<p>i think RSS feeds are nice and i want more people to use them. i hope you learned something from this! if this inspired you to make an RSS feed then YAY! if this did not inspired you to make one, then that it also okay, but at least i tried.</p>
+		<hr>
+		<p class="date">last updated on 12.jul.24 / <a href="#">go to the top?</a></p>
 	</main>
 </body>
 
