--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
-	<title>tut rss</title>
+	<title>RSS guide</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../../body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="../tut.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -54,9 +54,9 @@
 		#rss div a {
 			font-size: 10px;
 		}
-		
-		nav a{
-			display:block;
+
+		nav a {
+			display: block;
 		}
 
 	</style>
@@ -67,14 +67,15 @@
 	<main>
 		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; tutorials &gt;</small>
 		<h1>RSS feeds</h1>
-<h4>table of contents: </h4>
+		<h4>table of contents: </h4>
 		<nav>
-		<a href="#intro">introduction</a>
-		<a href="#reader">RSS feed readers</a>
-		<a href="#setup">setting up an RSS feed</a>
-		<a href="#display">displaying an RSS feed in HTML</a>
-		<a href="#end">conclusion</a></nav>
-		
+			<a href="#intro">introduction</a>
+			<a href="#reader">RSS feed readers</a>
+			<a href="#setup">setting up an RSS feed</a>
+			<a href="#display">displaying an RSS feed in HTML</a>
+			<a href="#end">conclusion</a>
+		</nav>
+
 		<h2 id="intro">intro</h2>
 
 		<p>while the neocities activity feed sort of gets the job done at keeping you updated with other sites, there are other ways of getting updates from websites right to your doorstep. with this method, you can also see updates from sites that have their profiles disabled, or aren't <b>hosted</b> into neocities!</p>
